cmake_minimum_required(VERSION 3.26)
project(Learning_C__)

set(CMAKE_CXX_STANDARD 17)

add_executable(Learning_C__ main.cpp
        Program1.cpp
        Program2.cpp
        Program3.cpp
        Program4.cpp
        Program5.cpp
        Program6.cpp
        Program2Refac.cpp
        Program1Refac.cpp
        Program3Refac.cpp
)
