cmake_minimum_required(VERSION 3.26)
project(Learning_C__)

set(CMAKE_CXX_STANDARD 17)

add_executable(
        Program1.cpp
        Program2.cpp
        Program3.cpp
        Program4.cpp
        Program5.cpp
        Program6.cpp
        Program2Refac.cpp
        Program1Refac.cpp
        Program3Refac.cpp
        Program4Refac.cpp
        program5Refac.cpp
        program5Refac.cpp
        Program6Refac.cpp
        Program7.cpp
        Program8.cpp
        Program9.cpp
        program10.cpp
        program11.cpp
        program12.cpp
        program13.cpp
        program14.cpp
        program15.cpp
        program16.cpp
)
